<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background">

    <view
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            class="com.car.carparking.view.TitleView"
            android:id="@+id/titleview"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:layout_marginTop="10dp"
            android:id="@+id/linearlayout_name">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:id="@+id/textView"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="#ff000000"
                android:layout_gravity="center_vertical"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ff000000"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:id="@+id/linearlayout_pass">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_pass"
                android:id="@+id/textView2"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="#ff000000"
                android:layout_gravity="center_vertical"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/account_pass"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ff000000"
                android:textSize="20sp"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_pass"
                android:id="@+id/checkBox_display_pass"
                android:textSize="15sp"
                android:textColor="#ff000000"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:id="@+id/linearlayout_time">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_time"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="#ff000000"
                android:layout_gravity="center_vertical"/>

        <EditText
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/account_time"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_year"
                android:id="@+id/textView4"
                android:textSize="20sp"
                android:textColor="#ff000000"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearlayout_confirm"
            android:background="#ffffffff">

        <Button
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:text="@string/checkout"
                android:id="@+id/button_confirm"
                android:layout_gravity="center_vertical"
                android:background="@drawable/buttonsmall"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />

        <Button
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:text="@string/cancel"
                android:id="@+id/button_cancel"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:background="@drawable/buttonsmall"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>