<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">
    <com.car.carparking.view.TitleView
              android:layout_width="fill_parent"
              android:layout_height="60dp"
             android:id="@+id/title_view"/>  
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="#ffffffff"
    >
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:paddingLeft="30dip"
	    android:paddingRight="10dip"
	    android:gravity="center_vertical|center_horizontal"
	    android:textStyle="bold"
	    android:textColor="#ff000000"
	    android:text="@string/list_name"
	    android:textSize="22sp" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent" 
        android:layout_weight="1" 
        android:orientation="horizontal">
    </LinearLayout>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dip"
	    android:paddingRight="50dip"
	    android:gravity="center_vertical|center_horizontal"
	    android:textColor="#ff000000"
	    android:textStyle="bold"
	    android:text="@string/list_datetime"
	    android:textSize="22sp" />
 
    </LinearLayout>
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
       	android:layout_weight="1"
       	android:divider="#ff20bef9"
        android:dividerHeight="1dip"
        >
    </ListView>
    <LinearLayout 
        android:id="@+id/bottombox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffffff"
        >
        <LinearLayout  
            android:layout_width="match_parent"  
            android:layout_height="wrap_content"  
            android:orientation="horizontal"  
            android:gravity="center_vertical"  
             >  
         	<TextView
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	   			android:layout_gravity="center_horizontal"
	    		android:paddingLeft="10dip"
	    		android:paddingRight="10dip"
	    		android:gravity="center_vertical|center_horizontal"
	    		android:textStyle="bold"
	    		android:textColor="#ff000000"
	    		android:text="@string/list_count"
	    		android:textSize="24sp" />
			<TextView
	    		android:id="@+id/listcount"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:paddingLeft="10dip"
	    		android:paddingRight="10dip"
	    		android:gravity="center_vertical|center_horizontal"
	    		android:textColor="#ff000000"
	    		android:textSize="24sp" />   
        </LinearLayout>  
    </LinearLayout>

</LinearLayout>
